<resources>
    <string name="app_name">Smart IOT</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="sign_up">Signup Now</string>
    <string name="signup_now">Signup</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="sign_up_p1">Signup</string>
    <string name="Name">Name</string>
    <string name="sign_up_Name">Name</string>
    <string name="sign_up_Email">Email</string>
    <string name="sign_up_Username">Username</string>
    <string name="sign_up_pass">Password</string>
    <string name="sign_up_pass2">Confirm Password</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_logout">Logout</string>
    <string name="Welcom">Welcom To SmartIOT</string>
    <string name="action_policy">Privacy Policy</string>
    <string name="action_RegisterMobile">Register Mobile</string>
    <string name="action_explore">Go</string>
    <string name="card_title">Lights</string>
    <string name="card_content">Controle Lights from your rooms</string>
    <string name="card_Sensor">Proximity sensor</string>
    <string name="card_temp">Temperature</string>
    <string name="card_stitle">Fans</string>
    <string name="card_contsent">Control fans</string>
    <string name="card_contenst">Check the distance between objects</string>
    <string name="card_contenesst">Check Temperature and humidity</string>
</resources>
