<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_privacyPolicy"
        android:orderInCategory="100"
        android:title="@string/action_policy"
        app:showAsAction="never"
        android:onClick="showPolicy"/>
    <item
        android:id="@+id/action_RegisterMobile"
        android:orderInCategory="100"
        android:title="@string/action_RegisterMobile"
        app:showAsAction="never"
        android:onClick="Register"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"
        android:onClick="logout"/>
</menu>
